--- a/etape3/bibli_conf.ini
+++ b/etape3/bibli_conf.ini
@@ -3,8 +3,8 @@
 #( [Directories]et [Collection]) et les paires clé-valeur.
 
 [Directories]
-bibliotheque=/tmp/main/livres
-etats=/tmp/main/etats
+bibliotheque=main/Livres
+etats=main/Etats
 
 [Parameters]
-nbmax=1000
+nbmax=9
